<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.akira.nokincoronaquest.HardModeActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hard_corona_monster_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hardCoronaMonster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hard_corona_monster_image"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hard_corona_monster_name"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/remaining_hp"
        android:layout_width="57dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/remainingHp"
        android:textSize="23sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/hard_corona_monster_image" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="149dp"
        android:layout_height="91dp"
        android:layout_marginBottom="24dp"
        android:text="@string/menuStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/menu_name"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/menuName"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remaining_hp"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/repeat"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toStartOf="@+id/numberOfTimes"
        app:layout_constraintStart_toEndOf="@+id/menu_name"
        app:layout_constraintTop_toBottomOf="@+id/remaining_hp" />

    <TextView
        android:id="@+id/numberOfTimes"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/times"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/remaining_hp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="12dp"
        android:text="@string/hp"
        android:textSize="23sp"
        app:layout_constraintEnd_toStartOf="@+id/easy_corona_monster_hp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hard_corona_monster_image" />

    <TextView
        android:id="@+id/maximum_hp"
        android:layout_width="57dp"
        android:layout_height="32dp"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/maximumHp"
        android:textAlignment="center"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/easy_corona_monster_hp"
        app:layout_constraintTop_toBottomOf="@+id/hard_corona_monster_image" />

    <Button
        android:id="@+id/result_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/resultButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
