<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.akira.nokincoronaquest.EasyModeActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/easy_corona_monster_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/easyCoronaMonster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/easy_corona_monster_image"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_corona_monster_name"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/easy_corona_monster_hp"
        android:layout_width="108dp"
        android:layout_height="34dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="8dp"
        android:text="@string/coronaMonsterHp"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/easy_corona_monster_image" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="149dp"
        android:layout_height="91dp"
        android:layout_marginBottom="24dp"
        android:text="@string/menuStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/menu_name"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:text="@string/menuName"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_corona_monster_hp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/repeat"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toStartOf="@+id/numberOfTimes"
        app:layout_constraintStart_toEndOf="@+id/menu_name"
        app:layout_constraintTop_toBottomOf="@+id/easy_corona_monster_hp" />

    <TextView
        android:id="@+id/numberOfTimes"
        android:layout_width="105dp"
        android:layout_height="41dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:text="@string/times"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/easy_corona_monster_hp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:text="@string/hp"
        android:textSize="23sp"
        app:layout_constraintEnd_toStartOf="@+id/easy_corona_monster_hp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_corona_monster_image" />
</android.support.constraint.ConstraintLayout>
